<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id98099815.mad.exercise3.ActivityOne"
    tools:showIn="@layout/activity_one">

    <!-- The image view at the top of the activity -->
    <ImageView
        android:id="@+id/activity_one_thumbs_up_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/thumbsup" />

    <!-- Layout for all the edit text fields below the thumbs up image view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <!-- The your_name edit text field below the your thumbs up image view -->
        <EditText
            android:id="@+id/activity_one_name_edit_text"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/activity_one_thumbs_up_image_view"
            android:layout_marginTop="135dp"
            android:hint="@string/your_name"
            android:inputType="textCapSentences"
            tools:ignore="NotSibling" />

        <!-- The your_phone edit text field below the your_name edit text field -->
        <EditText
            android:id="@+id/activity_one_number_edit_text"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activity_one_name_edit_text"
            android:layout_marginTop="20dp"
            android:hint="@string/your_phone"
            android:inputType="number" />

        <!-- The your_email edit text field below the your_phone edit text field -->
        <EditText
            android:id="@+id/activity_one_email_edit_text"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activity_one_number_edit_text"
            android:layout_marginTop="20dp"
            android:hint="@string/your_email"
            android:inputType="textCapSentences" />
    </RelativeLayout>

    <!-- Bottom of activity above the quit and rotate buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-115dp"
        android:orientation="horizontal">

        <!-- The clear name button -->
        <Button
            android:id="@+id/activity_one_clear_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:onClick="onClick"
            android:text="@string/clr_name" />

        <!-- The swap image button -->
        <Button
            android:id="@+id/activity_one_swap_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/swap_image" />

        <!-- The clear email button -->
        <Button
            android:id="@+id/activity_one_clear_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"

            android:text="@string/clr_email" />

    </LinearLayout>

    <!-- Bottom of activity beneath clear name, swap image and clear email buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <!-- The rotate button -->
        <Button
            android:id="@+id/activity_one_rotate_button"
            android:layout_width="670px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:text="@string/rotate" />

        <!-- The quit button -->
        <Button
            android:id="@+id/activity_one_quit_button"
            android:layout_width="670px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:text="@string/quit" />

    </LinearLayout>
</RelativeLayout>
